fix(user-service): restore pre-merge service logic for F7 F8 F9 (56-29212)